# snail

./: .dir-locals.el  .gitignore  CMakeLists.txt  Makefile  config.h.in  devel_readme.txt  findtodo.sh  switch_to_production_mode.sh
src/: CMakeLists.txt  test_config.h
src/core/: CMakeLists.txt  application_factory.cc  application_factory.h  attribute.cc  attribute.h  attribute_adder_model.cc  attribute_adder_model.h  attribute_collection_model.cc  attribute_collection_model.h  attribute_set_model.cc  attribute_set_model.h  candidate_item_any_data.h  few_entity_attr_editor_model.cc  few_entity_attr_editor_model.h  generic_attribute.h  generic_attribute_supplier.h  kbnode.h  kbnode_attribute.cc  kbnode_attribute.h  kbnode_attribute_model.cc  kbnode_attribute_model.h  kbnode_attribute_supplier.cc  kbnode_attribute_supplier.h  kbnode_item_provider.cc  kbnode_item_provider.h  kbnode_link_attribute.cc  kbnode_link_attribute.h  kbnode_link_attribute_inline_editor_model.cc  kbnode_link_attribute_inline_editor_model.h  kbnode_link_attribute_popup_editor_model.cc  kbnode_link_attribute_popup_editor_model.h  kbnode_manager.cc  kbnode_manager.h  kbnode_provider.cc  kbnode_provider.h  kbnode_provider_model.cc  kbnode_provider_model.h  link_type.cc  link_type.h  main_window_model.cc  (+18 more)
src/core/command/: command.h  command_processor.cc  command_processor.h
src/core/factory/: Sources.cmake  application_factory.cc  application_factory.h  attribute_model_factory.cc  attribute_model_factory.h  attribute_set_model_factory.cc  attribute_set_model_factory.h  simple_kbnode_adder_model_factory.cc  simple_kbnode_adder_model_factory.h  work_factory.cc  work_factory.h  (+2 more)
src/main/: CMakeLists.txt  main.cc
src/pfmvp/: CMakeLists.txt  pf_single_view_factory_manager.cc  pf_triad_manager.cc  pf_triad_manager.h  pf_view_factory_manager.cc
src/qtpropertybrowser/: CMakeLists.txt  common.h  demo.cpp  qtabstracteditorfactory.cpp  qtabstracteditorfactory.h  qtabstractpropertymanager.cpp  qtabstractpropertymanager.h  qteditorfactory.h  qtpropertybrowser.cpp  qtpropertybrowser.h  qtpropertymanager.cpp  qtpropertymanager.h
src/qtui/: CMakeLists.txt  attr_create_view_args.cc  attr_create_view_args.h  attribute_adder_presenter.cc  attribute_adder_presenter.h  attribute_collection_presenter.cc  attribute_collection_presenter.h  attribute_collection_qmodel.cc  attribute_collection_qmodel.h  attribute_delegate.cc  attribute_delegate.h  attribute_layout.cc  attribute_layout.h  candidate_item_qmodel_adapter.cc  candidate_item_qmodel_adapter.h  few_entity_attr_editor_presenter.h  few_entity_candidates_adapter.cc  few_entity_candidates_adapter.h  generic_view_base.h  kbnode_attribute_edit_presenter.cc  kbnode_attribute_edit_presenter.h  kbnode_provider_presenter.cc  kbnode_provider_presenter.h  kbnode_tree_qmodel.cc  kbnode_tree_qmodel.h  main_window.cc  main_window.h  main_window_presenter.h  main_window_view_factory.cc  qt_uiengine.cc  qt_uiengine.h  work_attribute_presenter.cc  work_attribute_presenter.h  work_basic_info_qmodel.cc  work_basic_info_qmodel.h  work_name_input_dialog.cc  work_name_input_dialog.h  work_presenter.cc  work_presenter.h  work_view.cc  (+7 more)
src/utils/: CMakeLists.txt  i18n.h  raw_singleton.th  singleton.h  type.cc  type.h  utils.cc  utils.h
test/: CMakeLists.txt  test_config.h
test/core/: CMakeLists.txt  attribute_adder_model_test.cc  attribute_collection_model_test.cc  attribute_set_model_test.cc  attribute_test_stub.cc  attribute_test_stub.h  candidate_item_any_data_test.cc  candidate_item_test.cc  candidate_item_test_helper.h  dummy_pfmodel.h  entity_test_helper.h  few_entity_attr_editor_model_test.cc  generic_attribute_supplier_test.cc  generic_attribute_supplier_test.h  generic_attribute_test.cc  kbnode_attribute.h  kbnode_attribute_model_test.cc  kbnode_attribute_supplier.h  kbnode_attribute_supplier_test.cc  kbnode_attribute_test.cc  kbnode_id_generator.h  kbnode_item_provider_test.cc  kbnode_link_attribute_inline_editor_model_test.cc  kbnode_link_attribute_popup_editor_model_test.cc  kbnode_link_attribute_test.cc  kbnode_manager.h  kbnode_manager_test.cc  kbnode_provider_model_test.cc  kbnode_provider_test.cc  link_type_test.cc  main_window_model_test.cc  mock_kbnode_attribute.h  mock_kbnode_attribute_supplier.h  mock_kbnode_manager.h  mock_work.h  pf_triad_manager_test.cc  simple_kbnode_adder_model_test.cc  tree_item_provider_test.cc  work.h  work_attribute_model_test.cc  (+4 more)
test/gmock_ext/: gmock_ext.h
test/pfmvp/: CMakeLists.txt  pf_triad_manager_auto_remove_child_test.cc  pf_triad_manager_one_model_multi_view_factory_test.cc  pf_triad_manager_test.cc  pf_triad_manager_test_base.h  pf_view_factory_manager_test.cc
test/qtui/: CMakeLists.txt  attr_create_view_args_test.cc  attribute_adder_presenter_test.cc  attribute_collection_presenter_test.cc  attribute_collection_qmodel_test.cc  attribute_delegate_test.cc  attribute_layout_test.cc  candidate_item_qmodel_adapter_test.cc  few_entity_attr_editor_presenter_test.cc  few_entity_candidates_adapter_test.cc  kbnode_attribute_edit_presenter_test.cc  kbnode_provider_presenter_test.cc  kbnode_tree_qmodel_test.cc  main_window_presenter_test.cc  qt_uiengine_test.cc  test_attr_display_block_generator.cc  test_attr_display_block_generator.h  test_attr_display_block_generator_test.cc  testconfig.h.in  work_attribute_presenter_test.cc  work_basic_info_qmodel_test.cc  work_presenter_test.cc  work_test_utils.h  workspace_presenter_test.cc
test/testutils/: CMakeLists.txt  copy_move_test_helper.h  fixture_factory.h  generic_mock_listener.h  gmock_common.h  log_testspy.cc  log_testspy.h  mock_object_generator.h  model_view_mock_generator.h  qmodelindex_generator.h  random_string.h  shared_mock_listener.h  simple_mock_listener.h  slot_catcher.h  user_log_testspy.cc  user_log_testspy.h  utils.cc  utils.h
test/utils/: CMakeLists.txt  boost_signal2_wp_memory_leak_test.cc  enum_class_range_test.cc  mock_object_generator_test.cc  model_view_mock_generator_test.cc  move_test.cc  qmodelindex_generator_test.cc  range_test.cc  singleton_test.cc  testmove.cc
(+393 files in other folders)
